
calendar_files = files(
    'AgendaView.vala',
    'Application.vala',
    'ImportDialog.vala',
    'LanguagesFormat.vala',
    'MainWindow.vala',
    'TodayEventMonitor.vala',
    'EventEdition/EventDialog.vala',
    'EventEdition/GuestGrid.vala',
    'EventEdition/GuestsPanel.vala',
    'EventEdition/InfoPanel.vala',
    'EventEdition/LocationPanel.vala',
    'EventEdition/ReminderPanel.vala',
    'EventEdition/RepeatPanel.vala',
    'EventParser/EventParser.vala',
    'EventParser/EventParserHandler.vala',
    'EventParser/ParsedEvent.vala',
    'EventParser/Parsers/ParserDe.vala',
    'EventParser/Parsers/ParserEn.vala',
    'Grid/CalendarView.vala',
    'Grid/GridDay.vala',
    'Grid/Grid.vala',
    'Grid/EventButton.vala',
    'Grid/WeekLabels.vala',
    'Grid/Header.vala',
    'Grid/VAutoHider.vala',
    'SourceDialog/SourceDialog.vala',
    'Widgets/AgendaEventRow.vala',
    'Widgets/CalendarButton.vala',
    'Widgets/CalendarChooser.vala',
    'Widgets/CalendarRow.vala',
    'Widgets/ContractorButtonWithMenu.vala',
    'Widgets/DateSwitcher.vala',
    'Widgets/DateTimePicker.vala',
    'Widgets/DynamicSpinner.vala',
    'Widgets/EventMenu.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/SourcePopover.vala',
    'Widgets/SourceRow.vala',
    'Widgets/ConnectivityInfoBar.vala'
)

calendar_deps = [
    core_dep,
    glib_dep,
    granite_dep,
    gtk_dep,
    handy_dep,
    libecal_dep,
    libedataserver_dep,
    libedataserverui_dep,
    libical_dep,
    libsoup_dep,
    gmodule_dep,
    m_dep,
    champlain_dep,
    champlain_gtk_dep,
    clutter_dep,
    clutter_gtk_dep,
    folks_dep,
    geocode_glib_dep,
    gclue_dep
]

executable(
    meson.project_name(),
    calendar_files,
    conf_file,
    gresource_calendar,
    dependencies: calendar_deps,
    install: true
)
