
calendar_files = files(
    'Application.vala',
    'LanguagesFormat.vala',
    'MainWindow.vala',
    'TodayEventMonitor.vala',
    'AgendaView/AgendaEventRow.vala',
    'AgendaView/AgendaView.vala',
    'CalendarView/CalendarView.vala',
    'CalendarView/GridDay.vala',
    'CalendarView/Grid.vala',
    'CalendarView/EventButton.vala',
    'CalendarView/WeekLabels.vala',
    'CalendarView/Header.vala',
    'CalendarView/VAutoHider.vala',
    'Dialogs/DeleteDialog.vala',
    'Dialogs/EventEdition/EventDialog.vala',
    'Dialogs/EventEdition/GuestGrid.vala',
    'Dialogs/EventEdition/GuestsPanel.vala',
    'Dialogs/EventEdition/InfoPanel.vala',
    'Dialogs/EventEdition/LocationPanel.vala',
    'Dialogs/EventEdition/ReminderPanel.vala',
    'Dialogs/EventEdition/RepeatPanel.vala',
    'Dialogs/ImportDialog.vala',
    'Dialogs/SourceDialog.vala',
    'EventParser/EventParser.vala',
    'EventParser/EventParserHandler.vala',
    'EventParser/ParsedEvent.vala',
    'EventParser/Parsers/ParserDe.vala',
    'EventParser/Parsers/ParserEn.vala',
    'Widgets/CalendarButton.vala',
    'Widgets/CalendarChooser.vala',
    'Widgets/CalendarRow.vala',
    'Widgets/ContractorButtonWithMenu.vala',
    'Widgets/DateSwitcher.vala',
    'Widgets/DateTimePicker.vala',
    'Widgets/DynamicSpinner.vala',
    'Widgets/EventMenu.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/SourcePopover.vala',
    'Widgets/SourceRow.vala',
    'Widgets/ConnectivityInfoBar.vala'
)

calendar_deps = [
    core_dep,
    glib_dep,
    granite_dep,
    gtk_dep,
    handy_dep,
    libecal_dep,
    libedataserver_dep,
    libedataserverui_dep,
    libical_dep,
    libsoup_dep,
    gmodule_dep,
    m_dep,
    champlain_dep,
    champlain_gtk_dep,
    clutter_dep,
    clutter_gtk_dep,
    folks_dep,
    geocode_glib_dep,
    gclue_dep,
    libportal_dep
]

executable(
    meson.project_name(),
    calendar_files,
    conf_file,
    gresource_calendar,
    dependencies: calendar_deps,
    install: true
)
