pkg_check_modules (CALDAV_DEPS QUIET libsoup-2.4)
if (CALDAV_DEPS_FOUND)

set (CALDAV_CFLAGS ${CORE_CFLAGS} ${CALDAV_DEPS_CFLAGS})
set (CALDAV_LIBRARIES ${CORE_LIBRARIES} ${CORE_LIBRARY_NAME} ${CALDAV_DEPS_LIBRARIES})
set (CALDAV_LIBRARY_DIRS ${CORE_LIBRARY_DIRS} ${CALDAV_DEPS_LIBRARY_DIRS})

add_definitions (${CALDAV_CFLAGS})
link_directories (${CALDAV_LIBRARY_DIRS})

set (TARGET_NAME caldav)
vala_precompile (CALDAV_VALA_C ${TARGET_NAME}
    CalDAVBackend.vala
PACKAGES
    ${CORE_PACKAGES}
    ${CMAKE_PROJECT_NAME}
    libsoup-2.4
OPTIONS
    ${GLOBAL_VALAC_OPTIONS}
)

add_library (${TARGET_NAME} MODULE ${CALDAV_VALA_C})

target_link_libraries (${TARGET_NAME} ${CALDAV_LIBRARIES})
add_dependencies (${TARGET_NAME} ${CMAKE_PROJECT_NAME})

install (TARGETS ${TARGET_NAME} DESTINATION ${PLUGIN_DIR}/CalDAV/)

else ()

message("-- CalDAV plugin disabled")

endif ()